--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
   </head>
   <body>
     <h1 class="text-red-500">Testing</h1>
+    Preview Gabrielle Essence Eau De Parfum A floral, solar and voluptuous
+    interpretation composed by Olivier Polge, Perfumer-Creator for the House of
+    CHANEL. $149.99 $169.99 Add to Cart
   </body>
 </html>
