--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
     <title>Product preview card component - created by lilKriT</title>
   </head>
   <body>
-    <h1 class="text-red-500">Testing</h1>
+    <!-- Main Section -->
+    <section class="min-h-screen bg-cream flex justify-center items-center">
+      <!-- Information box -->
+      <div class="w-2/5 bg-white rounded-lg">
+        <!-- Left column -->
+        <img
+          src="./src/images/image-product-desktop.jpg"
+          alt="A bottle of Parfum"
+        />
+        <!-- Right column -->
+        <div>asdf</div>
+      </div>
+    </section>
     Preview Gabrielle Essence Eau De Parfum A floral, solar and voluptuous
     interpretation composed by Olivier Polge, Perfumer-Creator for the House of
     CHANEL. $149.99 $169.99 Add to Cart
