Added structure to the page.

--- a/index.html
+++ b/index.html
@@ -22,18 +22,27 @@
     <!-- Main Section -->
     <section class="min-h-screen bg-cream flex justify-center items-center">
       <!-- Information box -->
-      <div class="w-2/5 bg-white rounded-lg">
+      <div class="w-2/5 bg-white rounded-xl flex overflow-hidden">
         <!-- Left column -->
         <img
           src="./src/images/image-product-desktop.jpg"
           alt="A bottle of Parfum"
+          width="600"
+          height="900"
+          class="w-1/2"
         />
         <!-- Right column -->
-        <div>asdf</div>
+        <div>
+          <h3>Perfume</h3>
+          <h2>Gabrielle Essence Eau De Parfum</h2>
+          <p>
+            A floral, solar and voluptuous interpretation composed by Olivier
+            Polge, Perfumer-Creator for the House of CHANEL.
+          </p>
+          <p>$149.99 <span>$169.99</span></p>
+          <button>Add to Cart</button>
+        </div>
       </div>
     </section>
-    Preview Gabrielle Essence Eau De Parfum A floral, solar and voluptuous
-    interpretation composed by Olivier Polge, Perfumer-Creator for the House of
-    CHANEL. $149.99 $169.99 Add to Cart
   </body>
 </html>
