--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           class="w-1/2"
         />
         <!-- Right column -->
-        <div>
-          <h3>Perfume</h3>
+        <div class="p-8">
+          <h3 class="uppercase tracking-[3px]">Perfume</h3>
           <h2>Gabrielle Essence Eau De Parfum</h2>
           <p>
             A floral, solar and voluptuous interpretation composed by Olivier
