--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         <!-- Right column -->
         <div class="p-8">
           <h3 class="uppercase tracking-[3px]">Perfume</h3>
-          <h2>Gabrielle Essence Eau De Parfum</h2>
+          <h2 class="font-fraunces text-4xl">
+            Gabrielle Essence Eau De Parfum
+          </h2>
           <p>
             A floral, solar and voluptuous interpretation composed by Olivier
             Polge, Perfumer-Creator for the House of CHANEL.
