--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
             Polge, Perfumer-Creator for the House of CHANEL.
           </p>
           <p>$149.99 <span>$169.99</span></p>
-          <button>Add to Cart</button>
+          <button class="bg-darkCyan w-full p-3 rounded-lg text-white">
+            Add to Cart
+          </button>
         </div>
       </div>
     </section>
