--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           class="w-1/2"
         />
         <!-- Right column -->
-        <div class="p-8">
+        <div class="p-8 flex flex-col justify-between">
           <h3 class="uppercase tracking-[3px]">Perfume</h3>
           <h2 class="font-fraunces text-4xl">
             Gabrielle Essence Eau De Parfum
