--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
           <h2 class="font-fraunces text-4xl">
             Gabrielle Essence Eau De Parfum
           </h2>
-          <p>
+          <p class="text-darkGrayishBlue">
             A floral, solar and voluptuous interpretation composed by Olivier
             Polge, Perfumer-Creator for the House of CHANEL.
           </p>
           <p class="font-fraunces text-2xl text-darkCyan">
-            $149.99 <span class="text-darkGrayishBlue">$169.99</span>
+            $149.99
+            <span class="text-darkGrayishBlue line-through">$169.99</span>
           </p>
           <button class="bg-darkCyan w-full p-3 rounded-lg text-white">
             Add to Cart
