--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
           </p>
           <p class="font-fraunces text-2xl text-darkCyan">
             $149.99
-            <span class="text-darkGrayishBlue line-through">$169.99</span>
+            <span class="text-darkGrayishBlue line-through text-base"
+              >$169.99</span
+            >
           </p>
           <button class="bg-darkCyan w-full p-3 rounded-lg text-white">
             Add to Cart
