--- a/index.html
+++ b/index.html
@@ -41,12 +41,10 @@
             A floral, solar and voluptuous interpretation composed by Olivier
             Polge, Perfumer-Creator for the House of CHANEL.
           </p>
-          <p class="font-fraunces text-2xl text-darkCyan">
-            $149.99
-            <span class="text-darkGrayishBlue line-through text-base"
-              >$169.99</span
-            >
-          </p>
+          <div class="font-fraunces flex items-center">
+            <p class="text-2xl text-darkCyan">$149.99</p>
+            <p class="text-darkGrayishBlue line-through text-base">$169.99</p>
+          </div>
           <button class="bg-darkCyan w-full p-3 rounded-lg text-white">
             Add to Cart
           </button>
