--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
             <p class="text-3xl text-darkCyan">$149.99</p>
             <p class="text-darkGrayishBlue line-through text-base">$169.99</p>
           </div>
-          <button class="bg-darkCyan w-full p-3 rounded-lg text-white">
+          <button
+            class="bg-darkCyan w-full p-3 rounded-lg text-white hover:bg-emerald-900 duration-150 ease-in-out"
+          >
             Add to Cart
           </button>
         </div>
