--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <!-- Main Section -->
     <section class="min-h-screen bg-cream flex justify-center items-center">
       <!-- Information box -->
-      <div class="w-2/5 bg-white rounded-xl flex overflow-hidden">
+      <div
+        class="w-2/5 bg-white rounded-xl flex flex-col lg:flex-row overflow-hidden"
+      >
         <!-- Left column -->
         <img
           src="./src/images/image-product-desktop.jpg"
