--- a/index.html
+++ b/index.html
@@ -23,16 +23,9 @@
     <section class="min-h-screen bg-cream flex justify-center items-center">
       <!-- Information box -->
       <div
-        class="w-2/5 min-w-[500px] mx-4 bg-white rounded-xl flex flex-col lg:flex-row overflow-hidden"
+        class="w-3/5 lg:w-2/5 min-w-[400px] lg:min-w-[600px] m-4 bg-white rounded-xl flex flex-col lg:flex-row overflow-hidden"
       >
         <!-- Left column -->
-        <!-- <img
-          src="./src/images/image-product-desktop.jpg"
-          alt="A bottle of Parfum"
-          width="600"
-          height="900"
-          class="w-1/2"
-        /> -->
         <div class="w-full lg:w-1/2">
           <picture>
             <source
@@ -46,7 +39,7 @@
           </picture>
         </div>
         <!-- Right column -->
-        <div class="p-8 flex flex-col justify-between w-1/2">
+        <div class="p-8 flex flex-col justify-between w-full lg:w-1/2">
           <h3 class="uppercase tracking-[3px]">Perfume</h3>
           <h2 class="font-fraunces text-4xl">
             Gabrielle Essence Eau De Parfum
