--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section class="min-h-screen bg-cream flex justify-center items-center">
       <!-- Information box -->
       <div
-        class="w-3/5 lg:w-2/5 min-w-[400px] lg:min-w-[600px] m-4 bg-white rounded-xl flex flex-col lg:flex-row overflow-hidden"
+        class="max-w-[600px] m-8 bg-white rounded-xl flex flex-col lg:flex-row overflow-hidden"
       >
         <!-- Left column -->
         <div class="w-full lg:w-1/2">
