Added the cart image.

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
             <p class="text-darkGrayishBlue line-through text-base">$169.99</p>
           </div>
           <button
-            class="bg-darkCyan w-full p-3 rounded-lg text-white hover:bg-emerald-900 duration-150 ease-in-out"
+            class="bg-darkCyan w-full p-3 rounded-lg text-white hover:bg-emerald-900 duration-150 ease-in-out flex justify-center items-center gap-4"
           >
+            <img src="./src/images/icon-cart.svg" alt="" />
             Add to Cart
           </button>
         </div>
