--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </picture>
         </div>
         <!-- Right column -->
-        <div class="p-8 flex flex-col justify-between w-full lg:w-1/2">
+        <div class="p-8 flex flex-col justify-between w-full lg:w-1/2 gap-6">
           <h3 class="uppercase tracking-[3px]">Perfume</h3>
           <h2 class="font-fraunces text-4xl">
             Gabrielle Essence Eau De Parfum
